kf-service/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
  annotations:
    cloud.google.com/backend-config: '{"default": "kf-backendconfig-01"}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    tier: web
  type: NodePort
